syntax = "proto3";

package product;

option go_package = "github.com/ecom-monorep/order-service/internal/client/proto/v1";

service ProductService{
    rpc GetProductById(  ProductRequest) returns (  ProductResponse);
}

message ProductRequest {
  int64 product_id = 1;
}


message ProductResponse{
  int64 product_id=1;
  string product_name=2;

}